# cpp_ripgrep

./: CMakeLists.txt  README.md  benchmark.sh  build_and_test.py
.github/workflows/: README.md  build.yml  ci.yml  daily.yml  pr.yml  release.yml
cmake/: windows-toolchain.cmake  windows32-toolchain.cmake
include/: common.hpp  file_scanner.hpp  gitignore.hpp  grep_engine.hpp  options.hpp  re2_matcher.hpp  regex_matcher.hpp
scripts/: build-windows.sh  install-windows.ps1
src/: file_scanner.cpp  gitignore.cpp  grep_engine.cpp  main.cpp  options.cpp  re2_matcher.cpp  regex_matcher.cpp
tests/: test_main.cpp
